added grid classes and 2 column content example

--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
 <body> 
 
     <div class="section">
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
+        <h1>CSS Grid library</h1>
+        <p>CSS grid framework with helper classes to help with custom web layouts.</p>
     </div>
-
+    <div class="section">
+        <h2>2 Column Content</h2>
+        <p>Here is an example of a 2 column content layout</p>
+        <div class="column-2">
+            
+            <div>
+                <p>Example of left content</p>
+            </div>
+            <div>
+                <p>Example of right content</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
